fix: Fixes some minor layout issues

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -55,6 +55,12 @@ header {
   color: var(--body-text);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+
+  gap: var(--app-padding);
+}
 .hide-element {
   position: absolute;
 
